# crawler_uber

./: .gitignore  main.py  pyproject.toml
recibo_uber/pages/: elements.py  page.py
recibo_uber/registro/: registro.py  to_csv.py
tests/: test_recibo_uber.py
